--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.16"
+    "axios": "^0.18.0",
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.3.1",
+    "vee-validate": "^2.1.0-beta.6",
+    "vue": "^2.5.16",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-rc.5",
